This commit adds the following:
* Replaced usage of `github.com/ogen-go/ogen` with a manually implemented HTTP layer.
  The `api/openapi.yaml` file now serves documentation purposes only.
* Added comprehensive context-based logging.
  Log level is now configurable via the `APP_LOG_LEVEL` environment variable.
* Introduced `APP_SUPPORTED_VERSION` environment variable to map supported CycloneDX SBOM versions to their schema definition URIs.
* Fixed content type handling for correct usage.
* Implemented JSON Problem Details support (RFC 9457).
* Added a new `search` endpoint.
* Extended upload/get business logic to handle `original` versions and various edge cases involving missing serial numbers and versions.
* Expanded `internal/env` configuration and corresponding unit tests to support new functionality.
* Added basic documentation, including detailed descriptions of all environment variables and a local run example.
* Currently, only manual testing is performed. Remaining unit and full integration tests will be added in future commits.
