# internal/oas/oas_server_gen.go
@@ -1,46 +1,0 @@
-// Code generated by ogen, DO NOT EDIT.
-
-package oas
-
-import (
-	"context"
-)
-
-// Handler handles operations described by OpenAPI v3 specification.
-type Handler interface {
-	// GetBOMByUrn implements getBOMByUrn operation.
-	//
-	// Retrieve a BOM by URN.
-	//
-	// GET /api/v1/bom/{urn}
-	GetBOMByUrn(ctx context.Context, params GetBOMByUrnParams) (GetBOMByUrnRes, error)
-	// UploadBOM implements uploadBOM operation.
-	//
-	// Upload a CBOM (CycloneDX 1.6).
-	//
-	// POST /api/v1/bom
-	UploadBOM(ctx context.Context, req UploadBOMReq) (UploadBOMRes, error)
-	// NewError creates *ErrorStatusCode from error returned by handler.
-	//
-	// Used for common default response.
-	NewError(ctx context.Context, err error) *ErrorStatusCode
-}
-
-// Server implements http server based on OpenAPI v3 specification and
-// calls Handler to handle requests.
-type Server struct {
-	h Handler
-	baseServer
-}
-
-// NewServer creates new Server.
-func NewServer(h Handler, opts ...ServerOption) (*Server, error) {
-	s, err := newServerConfig(opts...).baseServer()
-	if err != nil {
-		return nil, err
-	}
-	return &Server{
-		h:          h,
-		baseServer: s,
-	}, nil
-}
